add basic styles

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,16 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
     <title>Bingo</title>
   </head>
   <body>
@@ -27,8 +37,8 @@
       </div>
     </header>
     <main class="main">
-      <div class="main__balls"></div>
-      <div class="main__game"></div>
+      <div class="main__balls">Bolitas</div>
+      <div class="main__game">Mi cartón</div>
       <p class="main__message"></p>
     </main>
     <script src="../js/index.js"></script>
