add function to show random numbers

--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
       <img
         class="header__image"
         title="Logo de Adalab"
-        src="../images/adalab-logo-155x61.png"
+        src="../images/bingo.svg"
         alt="Página principal de Adalab"
       />
       <p class="header__bingo"></p>
