add click event to show ball one by one

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       />
       <p class="header__bingo"></p>
       <div class="header__game">
-        <p class="header__game-ball">Saca una bolita</p>
+        <button class="header__game-ball">Saca una bolita</button>
         <div class="header__game-play"><i class="fas fa-play"></i></div>
       </div>
     </header>
