add setInterval in button play

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
       <p class="header__bingo"></p>
       <div class="header__game">
         <button class="header__game-ball">Saca una bolita</button>
-        <div class="header__game-play"><i class="fas fa-play"></i></div>
+        <button class="header__game-play"><i class="fas fa-play"></i></button>
+        <!-- <img
+          class="header__game-play"
+          title="Play the game"
+          src="./images/punta-de-flecha.svg"
+          alt="Icono para empezar el juego"
+        /> -->
       </div>
     </header>
     <main class="main">
