add function to stop showing balls

--- a/index.html
+++ b/index.html
@@ -33,8 +33,21 @@
       />
       <p class="header__bingo"></p>
       <div class="header__game">
-        <button class="header__game-ball">Saca una bolita</button>
-        <button class="header__game-play"><i class="fas fa-play"></i></button>
+        <button class="header__btn-ball">Saca una bolita</button>
+        <button class="header__btn-play">
+          <img
+            src="./images/punta-de-flecha.svg"
+            alt=""
+            class="header__btn-play--image"
+          />
+        </button>
+        <button class="header__btn-stop">
+          <img
+            src="./images/square.svg"
+            alt=""
+            class="header__btn-stop--image"
+          />
+        </button>
         <!-- <img
           class="header__game-play"
           title="Play the game"
