add function to stop running balls when numbers match

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       </div>
     </header>
     <main class="main">
+      <div class="congratulations"></div>
       <div class="main__balls"><p>Bolitas</p></div>
 
       <div class="main__game"><p>Mi cartón</p></div>
