add button to show new game

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <div class="main__game"><p>Mi cartón</p></div>
 
       <p class="main__message"></p>
+      <button class="main__btn-newPlay">Nuevo cartón</button>
     </main>
     <script src="../js/index.js"></script>
   </body>
