add grid template to bingo card

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     </header>
 
     <main>
-      <!-- <p class="header__bingo"></p> -->
       <div class="main">
         <div class="main__btn">
           <button class="main__btn-ball">Saca una bolita</button>
@@ -56,9 +55,10 @@
           </button>
         </div>
         <div class="main__congratulations"></div>
-        <div class="main__balls"><p>Bolitas</p></div>
+        <p class="main__title">Bolas</p>
+        <div class="main__balls"></div>
         <div class="main__game"></div>
-        <!-- <p class="main__message"></p> -->
+
         <button class="main__btn-newPlay">Nuevo cartón</button>
       </div>
     </main>
