take off butto saca una bolita

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <div class="main">
         <div class="main__btn">
-          <button class="main__btn-ball">Saca una bolita</button>
+          <!-- <button class="main__btn-ball">Saca una bolita</button> -->
           <button class="main__btn-play">
             <img
               src="./images/punta-de-flecha.svg"
