add grid to balls and fix grid cingo card

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <main>
       <div class="main">
         <div class="main__btn">
+          <p class="main__title">Bolas</p>
           <!-- <button class="main__btn-ball">Saca una bolita</button> -->
           <button class="main__btn-play">
             <img
@@ -54,13 +55,12 @@
             />
           </button>
         </div>
-        <p class="main__title">Bolas</p>
         <div class="main__congratulations"></div>
-
-        <div class="main__balls"></div>
-        <div class="main__game"></div>
-
         <button class="main__btn-newPlay">Nuevo cartón</button>
+        <div class="main__container">
+          <div class="main__container-balls"></div>
+          <div class="main__container-game"></div>
+        </div>
       </div>
     </main>
     <script src="../js/index.js"></script>
