change background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -36,7 +35,7 @@
     <main>
       <div class="main">
         <div class="main__btn">
-          <p class="main__title">Bolas</p>
+          <!-- <p class="main__title">Bolas</p> -->
           <!-- <button class="main__btn-ball">Saca una bolita</button> -->
           <button class="main__btn-play">
             <img
@@ -54,15 +53,16 @@
               class="main__btn-stop--image"
             />
           </button>
+          <button class="main__btn-newPlay">Nuevo cartón</button>
         </div>
         <div class="main__congratulations"></div>
-        <button class="main__btn-newPlay">Nuevo cartón</button>
+
         <div class="main__container">
           <div class="main__container-balls"></div>
           <div class="main__container-game"></div>
         </div>
       </div>
     </main>
-    <script src="../js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
