change ball typography and colors in card

--- a/index.html
+++ b/index.html
@@ -35,22 +35,24 @@
     <main>
       <div class="main">
         <div class="main__btn">
-          <button class="main__btn-play">
-            <img
-              src="./images/punta-de-flecha.svg"
-              alt="Icono play"
-              title="Icono para activar el juego"
-              class="main__btn-play--image"
-            />
-          </button>
-          <button class="main__btn-stop">
-            <img
-              src="./images/square.svg"
-              alt="Icono stop"
-              title="Icono para parar el juego"
-              class="main__btn-stop--image"
-            />
-          </button>
+          <div>
+            <button class="main__btn-play">
+              <img
+                src="./images/punta-de-flecha.svg"
+                alt="Icono play"
+                title="Icono para activar el juego"
+                class="main__btn-play--image"
+              />
+            </button>
+            <button class="main__btn-stop">
+              <img
+                src="./images/square.svg"
+                alt="Icono stop"
+                title="Icono para parar el juego"
+                class="main__btn-stop--image"
+              />
+            </button>
+          </div>
           <button class="main__btn-newPlay">Nuevo cartón</button>
         </div>
         <div class="main__congratulations"></div>
@@ -61,6 +63,12 @@
         </div>
       </div>
     </main>
+    <footer>
+      <p>Coded by Yamira Martín</p>
+      <a href="">Linkedin</a>
+      <a href="">Github</a>
+      <a href="">Twitter</a>
+    </footer>
     <script src="./js/index.js"></script>
   </body>
 </html>
