--- a/index.html
+++ b/index.html
@@ -56,18 +56,40 @@
           <button class="main__btn-newPlay">Nuevo cartón</button>
         </div>
         <div class="main__congratulations"></div>
-
         <div class="main__container">
           <div class="main__container-balls"></div>
           <div class="main__container-game"></div>
         </div>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <p>Coded by Yamira Martín</p>
-      <a href="">Linkedin</a>
-      <a href="">Github</a>
-      <a href="">Twitter</a>
+      <div>
+        <a
+          href="https://www.linkedin.com/in/yamiramartinguzman/"
+          target="_blank"
+          ></a>
+            <img  
+              src="./images/linkedin.svg" 
+              alt="Icono Linkedin" 
+              title="Enlace a Linkedin de Yamira Martín"></a
+        >
+        <a 
+          href="https://github.com/ymartinguzman" 
+          target="_blank"  
+          >
+              <img  
+                src="./images/github.svg" 
+                alt="Icono Github" 
+                title="Enlace a Github de Yamira Martín"></a>
+        <a
+          href="mailto:yamiramartinguzman@gmail.com" 
+          target="_blank"  
+          >
+              <img 
+                src="./images/envelope.svg" 
+                alt="Icono email" title="Enlace a email de Yamira Martín"></a>
+      </div>
     </footer>
     <script src="./js/index.js"></script>
   </body>
