--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       />
     </header>
 
-    <main>
+    <main class="main-container">
       <div class="main">
         <div class="main__btn">
           <div>
