add new game, when bingo has already been finish

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               />
             </button>
           </div>
-          <button class="main__btn-newPlay">Nuevo cartón</button>
+          <button class="main__btn-hidden">Nuevo cartón</button>
         </div>
         <div class="main__congratulations"></div>
         <div class="main__container">
