fix linkedin link and change set interval

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
-    />    
+    />
     <link rel="stylesheet" href="./styles/main.css" />
     <title>Bingo</title>
   </head>
@@ -43,7 +43,6 @@
                 class="main__btn-stop--image"
               />
             </button>
-          
           </div>
           <button class="main__btn-hidden">Nuevo cartón</button>
         </div>
@@ -60,27 +59,24 @@
         <a
           href="https://www.linkedin.com/in/yamiramartinguzman/"
           target="_blank"
-          ></a>
-            <img  
-              src="./images/linkedin.svg" 
-              alt="Icono Linkedin" 
-              title="Enlace a Linkedin de Yamira Martín"></a
         >
-        <a 
-          href="https://github.com/ymartinguzman" 
-          target="_blank"  
-          >
-              <img  
-                src="./images/github.svg" 
-                alt="Icono Github" 
-                title="Enlace a Github de Yamira Martín"></a>
-        <a
-          href="mailto:yamiramartinguzman@gmail.com" 
-          target="_blank"  
-          >
-              <img 
-                src="./images/envelope.svg" 
-                alt="Icono email" title="Enlace a email de Yamira Martín"></a>
+          <img
+            src="./images/linkedin.svg"
+            alt="Icono Linkedin"
+            title="Enlace a Linkedin de Yamira Martín"
+        /></a>
+        <a href="https://github.com/ymartinguzman" target="_blank">
+          <img
+            src="./images/github.svg"
+            alt="Icono Github"
+            title="Enlace a Github de Yamira Martín"
+        /></a>
+        <a href="mailto:yamiramartinguzman@gmail.com" target="_blank">
+          <img
+            src="./images/envelope.svg"
+            alt="Icono email"
+            title="Enlace a email de Yamira Martín"
+        /></a>
       </div>
     </footer>
     <script src="./js/index.js"></script>
